--- a/index.html
+++ b/index.html
@@ -6,10 +6,41 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
   <link rel="stylesheet" href="/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+  <header class="m-[20px] p-[20px]">
+    <nav class="flex justify-between mr-[15px]" >
+        <div class="flex gap-[40px] ml-[80px]">
+            <h6 class="text-[16px] font-normal font-['Poppins']"style="color:rgba(25, 28, 34, 1)"> 
+                Talk to our team to start saving
+            </h6>
+            <h5 class="text-[16px] font-normal font-['Poppins']" style="color:rgba(0, 135, 101, 1)">
+                1.877.445.0070
+            </h5>
+        </div>
+
+        <h4>
+            Login
+        </h4>
+    </nav>
+  </header>
+  <section>
+    <div class="container">
+        <div class="rasm">
+            <h3>
+                Get started
+            </h3>
+            <h5>
+                Take control of your car payments
+            </h5>
+            <p>
+                You could save $110+ a month on your car loan*
+            </p>
+        </div>
+    </div>
+  </section>
 </body>
 </html>
